--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "styled-components": "^6.1.19",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
