--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "react-router-hash-link": "^2.4.3",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.13",
     "typewriter-effect": "^2.22.0"
